[package]
name = "ice-to-gold"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ice-to-gold"
path = "src/main.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3", features = ["HtmlVideoElement", "Window", "Document", "Element", "HtmlInputElement", "HtmlFormElement"] }
gloo = "0.11"
